# wager_cli

./: .env.example  .gitignore  Cargo.toml  README.md  makefile  specs.md
abi/: IWager.json
src/: lib.rs  main.rs  wager.rs
src/contracts/: addresses.json  addresses.rs  mod.rs
src/contracts/bindings/: i_wager.rs  mod.rs
