[package]
name = "wager_cli"
version = "0.1.0"
edition = "2021"


[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
ethers = "1.0.2"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
once_cell = "1.17.0"
ethers-core = "1.0"
ethers-contract = "1.0"
chrono = "0.4.23"
# serde = "1.0"
# serde_json = "1.0"
serde_derive = "1.0"

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
clap = {version = "4.4.3", features = ["derive"]}
dotenv = "0.15.0"

[features]
default = ["addresses"]

serde = ["dep:serde"]
addresses = ["serde", "serde_json"]

[build-dependencies]
# For bindings
ethers-contract = "1.0"
